--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.6
 
 flutter:
   uses-material-design: true
@@ -35,3 +36,21 @@ flutter_launcher_icons:
   web:
     generate: true
     image_path: "assets/common/app-icon.png"
+
+# Flutter Native Splash configuration
+flutter_native_splash:
+  color: "#ffffff"
+  color_android: "#ffffff"
+  color_dark_android: "#121212"
+  color_ios: "#ffffff"
+  color_dark_ios: "#121212"
+  color_web: "#ffffff"
+  color_dark_web: "#121212"
+  image: "assets/android/app-icon-foreground.png"
+  android_12:
+    color: "#ffffff"
+    icon_background_color: "#FFFFFF"
+    image: "assets/android/app-icon-foreground.png"
+    color_dark: "#121212"
+    icon_background_color_dark: "#121212"
+    image_dark: "assets/android/app-icon-foreground.png"
