--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
   firebase_core: ^4.1.0
   flutter_riverpod: ^2.6.1
   shared_preferences: ^2.5.3
+  intl: ^0.20.2
+  fl_chart: ^1.1.0
+  camera: ^0.11.2
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
@@ -24,8 +29,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
   assets:
     - assets/common/
+    - assets/images/
 
 # Flutter Launcher Icons configuration
 flutter_launcher_icons:
