--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,9 @@ dependencies:
   camera: ^0.11.2
   path_provider: ^2.1.5
   path: ^1.9.1
-  google_mlkit_object_detection: ^0.15.0
   video_player: ^2.10.0
+  image_picker: ^1.2.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
